Fixed a bug that make the overflow-X on small media screen visible.

--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@
 }
 
 body{
-   min-width: 360px !important;
+   min-width: 340px !important;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
-   overflow: hidden;
 }
 
 .custom-header{
@@ -68,6 +67,7 @@ body{
    height: 100%;
    flex: 1;
    position: relative;
+   overflow-x: hidden;
 }
 
 .section-filter{
@@ -93,14 +93,15 @@ body{
 }
 
 .section-products{
-   z-index: 0;
+   z-index: 1;
    width: 100%;
    height: 100%;
    position: absolute;
+   left: 0%;
 }
 
 .section-products-mask{
-   z-index: 1;
+   z-index: 2;
    width: 100%;
    height: 100%;
    position: absolute;
